[gd_scene load_steps=10 format=2]

[ext_resource path="res://GodotAlienTheme.tres" type="Theme" id=1]
[ext_resource path="res://PGEBase/graph_editor/GraphEditor.gd" type="Script" id=2]
[ext_resource path="res://PGEBase/icons/icon_close.svg" type="Texture" id=3]
[ext_resource path="res://PGEBase/graph_start/GraphStartPanelNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://PGEBase/graph_start/GraphStart.gd" type="Script" id=5]
[ext_resource path="res://PGEBase/graph_node_slot/GraphNodeSlot.tscn" type="PackedScene" id=6]
[ext_resource path="res://PGEBase/Messages.gd" type="Script" id=7]

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 20.0
bg_color = Color( 0.113725, 0.133333, 0.152941, 0.733333 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.307786, 1 ),
"update": 0,
"values": [ Vector2( 0.926261, 0.768455 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.378929, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="GraphEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 171.0
margin_top = 129.0
margin_right = 812.0
margin_bottom = 475.0
popup_exclusive = true
window_title = "Save Graph"
resizable = true
filters = PoolStringArray( "*.res" )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.133333, 0.152941, 1 )

[node name="Parts" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
custom_constants/separation = 2

[node name="Header" type="HBoxContainer" parent="Parts"]
margin_right = 1020.0
margin_bottom = 22.0

[node name="SaveButton" type="Button" parent="Parts/Header"]
margin_right = 41.0
margin_bottom = 22.0
text = "Save"

[node name="LoadButton" type="Button" parent="Parts/Header"]
margin_left = 45.0
margin_right = 87.0
margin_bottom = 22.0
text = "Load"

[node name="ExportButton" type="Button" parent="Parts/Header"]
margin_left = 91.0
margin_right = 143.0
margin_bottom = 22.0
text = "Export"

[node name="Title" type="Label" parent="Parts/Header"]
margin_left = 147.0
margin_right = 1020.0
margin_bottom = 22.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Graph Editor"

[node name="CloseButton" type="Button" parent="Parts/Header"]
visible = false
margin_left = 992.0
margin_right = 1020.0
margin_bottom = 24.0
focus_mode = 0
icon = ExtResource( 3 )

[node name="ScrollContainer" type="ScrollContainer" parent="Parts"]
margin_top = 24.0
margin_right = 1020.0
margin_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="Parts/ScrollContainer"]
margin_right = 1020.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GraphStart" type="Panel" parent="Parts/ScrollContainer/Panel"]
margin_left = 18.0
margin_top = 16.9072
margin_right = 78.0
margin_bottom = 43.9072
focus_mode = 1
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 5 )

[node name="Label" type="Label" parent="Parts/ScrollContainer/Panel/GraphStart"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -11.0
margin_right = 37.0
margin_bottom = 11.0
theme = ExtResource( 1 )
text = "Start"

[node name="GraphNodeSlot" parent="Parts/ScrollContainer/Panel/GraphStart" instance=ExtResource( 6 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -15.0
margin_top = -7.5
margin_right = 0.0
margin_bottom = 7.5
max_connections = 1

[node name="Messages" type="Label" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
margin_left = 454.0
margin_top = 30.0
margin_right = -454.0
margin_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.926261, 0.768455 )
rect_pivot_offset = Vector2( 58, 11 )
custom_styles/normal = SubResource( 2 )
text = "Message"
align = 1
valign = 1
script = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Messages"]
anims/show_message = SubResource( 3 )

[node name="Timer" type="Timer" parent="Messages"]
wait_time = 3.0
one_shot = true
